// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fields component Creates a text and checkbox field field 1`] = `
<div
  className="caldera-fields-wrapper"
>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-text"
  >
    <label
      className="caldera-field-label caldera-field-label-text"
      htmlFor="firstName"
    >
      First Name
       
    </label>
    <input
      aria-describedby="firstName__help"
      className="caldera-field caldera-field-text"
      id="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="roy"
    />
    <p
      className="caldera-control__help description"
      id="firstName__help"
    >
      your first name
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <input
      aria-describedby="checkboxFieldLabel__help"
      checked={true}
      className="caldera-field caldera-field-checkbox"
      id="checkboxFieldLabel"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="checkboxFieldLabel"
    >
      Checkbox Labe
       
    </label>
    <p
      className="caldera-control__help description"
      id="checkboxFieldLabel__help"
    >
      Checkbox field description
    </p>
  </div>
</div>
`;

exports[`Fields component Creates all five fields 1`] = `
<div
  className="caldera-fields-wrapper"
>
  <fieldset
    className="caldera-fieldset caldera-fieldset-checkboxes"
  >
    <legend>
      Checkbox Field Set Label
    </legend>
    <div
      className="caldera-field-wrapper caldera-field-wrapper-checkbox"
    >
      <input
        checked={false}
        className="caldera-field caldera-field-checkbox"
        id="opt-1"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="caldera-field-label caldera-field-label-checkbox"
        htmlFor="opt-1"
      >
        One
         
      </label>
    </div>
    <div
      className="caldera-field-wrapper caldera-field-wrapper-checkbox"
    >
      <input
        aria-describedby="opt-2__help"
        checked={true}
        className="caldera-field caldera-field-checkbox"
        id="opt-2"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="caldera-field-label caldera-field-label-checkbox"
        htmlFor="opt-2"
      >
        Two
         
      </label>
      <p
        className="caldera-control__help description"
        id="opt-2__help"
      >
        The Second Option
      </p>
    </div>
    <div
      className="caldera-field-wrapper caldera-field-wrapper-checkbox"
    >
      <input
        checked={false}
        className="caldera-field caldera-field-checkbox"
        id="opt-3"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <label
        className="caldera-field-label caldera-field-label-checkbox"
        htmlFor="opt-3"
      >
        Three
         
      </label>
    </div>
  </fieldset>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-select"
  >
    <label
      className="caldera-field-label caldera-field-label-select"
      htmlFor="selectFieldId"
    >
      Select Field Label
       
    </label>
    <select
      aria-describedby="selectFieldId__help"
      className="caldera-field caldera-field-select"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
      required={true}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
    <p
      className="caldera-control__help description"
      id="selectFieldId__help"
    >
      Select field description
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-checkbox"
  >
    <input
      aria-describedby="checkboxFieldLabel__help"
      checked={true}
      className="caldera-field caldera-field-checkbox"
      id="checkboxFieldLabel"
      onChange={[Function]}
      type="checkbox"
      value="1"
    />
    <label
      className="caldera-field-label caldera-field-label-checkbox"
      htmlFor="checkboxFieldLabel"
    >
      Checkbox Labe
       
    </label>
    <p
      className="caldera-control__help description"
      id="checkboxFieldLabel__help"
    >
      Checkbox field description
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-number"
  >
    <label
      className="caldera-field-label caldera-field-label-number"
      htmlFor="numberFieldId"
    >
      Number Field Label
       
    </label>
    <input
      aria-describedby="numberFieldId__help"
      className="caldera-field caldera-field-number"
      id="numberFieldId"
      max={10}
      min={1}
      onBlur={[Function]}
      onChange={[Function]}
      type="number"
      value={3}
    />
    <p
      className="caldera-control__help description"
      id="numberFieldId__help"
    >
      Number field description
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-text"
  >
    <label
      className="caldera-field-label caldera-field-label-text"
      htmlFor="firstName"
    >
      First Name
       
    </label>
    <input
      aria-describedby="firstName__help"
      className="caldera-field caldera-field-text"
      id="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="roy"
    />
    <p
      className="caldera-control__help description"
      id="firstName__help"
    >
      your first name
    </p>
  </div>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-email"
  >
    <label
      className="caldera-field-label caldera-field-label-email"
      htmlFor="emailFieldId"
    >
      Email Field Label
       
    </label>
    <input
      aria-describedby="emailFieldId__help"
      className="caldera-field caldera-field-email"
      id="emailFieldId"
      multiple={true}
      onBlur={[Function]}
      onChange={[Function]}
      type="email"
      value="emai@email.com"
    />
    <p
      className="caldera-control__help description"
      id="emailFieldId__help"
    >
      Email field description
    </p>
  </div>
</div>
`;
